k8s/service.yml
apiVersion: v1
kind: Service
metadata:
  name: order-service
  labels:
    app: order-service
spec:
  type: ClusterIP
  selector:
    app: order-service # The label used to match the Pods to target and expose
  ports:
    - protocol: TCP
      port: 80            # The port exposed by the Service
      targetPort: 8530    # The port exposed by the Pods targeted by the Service
